{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 1109,
  "lineage": "fcc73a5e-d8f5-6a0f-34e1-7668b1b4a86a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "timechamp-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:437488593684:loadbalancer/app/timechamp-lb/1fcfaa538366944f",
            "arn_suffix": "app/timechamp-lb/1fcfaa538366944f",
            "dns_name": "timechamp-lb-1925357078.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:437488593684:loadbalancer/app/timechamp-lb/1fcfaa538366944f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "timechamp-lb",
            "security_groups": [
              "sg-0596dfc2fe3746052"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-24a24958"
              },
              {
                "subnet_id": "subnet-4b3a8721"
              }
            ],
            "subnets": [
              "subnet-24a24958",
              "subnet-4b3a8721"
            ],
            "vpc_id": "vpc-dfca1fb5",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "timechamp-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:437488593684:listener/app/timechamp-lb/1fcfaa538366944f/d57ce5190ae235eb",
            "certificate_arn": "arn:aws:acm:eu-central-1:437488593684:certificate/a2895880-5060-4161-bea0-d25c7a968356",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:437488593684:targetgroup/lb-tg-http/3bf25c75ef126b75",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:437488593684:listener/app/timechamp-lb/1fcfaa538366944f/d57ce5190ae235eb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:437488593684:loadbalancer/app/timechamp-lb/1fcfaa538366944f",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.timechamp-lb",
            "aws_lb_target_group.lb_target_group",
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:437488593684:targetgroup/lb-tg-http/3bf25c75ef126b75",
            "arn_suffix": "targetgroup/lb-tg-http/3bf25c75ef126b75",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/v2/master/auth",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:437488593684:targetgroup/lb-tg-http/3bf25c75ef126b75",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-tg-http",
            "port": 8083,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-dfca1fb5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:437488593684:security-group/sg-039d06b57b48810bd",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039d06b57b48810bd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0596dfc2fe3746052"
                ],
                "self": false,
                "to_port": 8083
              }
            ],
            "name": "master-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "437488593684",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-dfca1fb5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:437488593684:security-group/sg-0596dfc2fe3746052",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0596dfc2fe3746052",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "master-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "437488593684",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-dfca1fb5"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}